MZ-16 updated Kendo UI grid colors; fixed input-group margin; added Users link to admin nav

--- a/src/Mzayad.Web/Content/site-forms.css
+++ b/src/Mzayad.Web/Content/site-forms.css
@@ -67,6 +67,12 @@ input[type=number].no-spinner::-webkit-outer-spin-button {
 .form-inline .form-control:last-child {
   margin-bottom: 5px;
 }
+.input-group {
+  margin-bottom: 5px;
+}
+.input-group .form-control {
+  margin-bottom: 0 !important;
+}
 .input-group-addon {
   border-radius: 0;
   font-size: 1.5rem;
