--- a/src/Mzayad.Web/Content/site-kendo.less
+++ b/src/Mzayad.Web/Content/site-kendo.less
@@ -18,7 +18,7 @@
 }
 
 .k-pager-wrap {
-    background-color: @dark1;
+    background-color: @base;
 
     .k-link {
         border: none;
@@ -28,4 +28,20 @@
 
 .k-pager-numbers .k-state-selected {
     border-radius: 0; 
+}
+
+.k-state-selected, 
+.k-state-selected:link, 
+.k-state-selected:visited, 
+.k-list > .k-state-selected, 
+.k-list > .k-state-highlight, 
+.k-panel > .k-state-selected, 
+.k-ghost-splitbar-vertical, 
+.k-ghost-splitbar-horizontal, 
+.k-draghandle.k-state-selected:hover, 
+.k-scheduler .k-scheduler-toolbar .k-state-selected, 
+.k-scheduler .k-today.k-state-selected, .k-marquee-color {
+    color: #ffffff;
+    background-color: lighten(@base, 50%);
+    border-color: lighten(@base, 50%);
 }
