--- a/src/Mzayad.Web/Content/site-forms.less
+++ b/src/Mzayad.Web/Content/site-forms.less
@@ -78,6 +78,14 @@ input[type=number].no-spinner::-webkit-outer-spin-button {
     margin-bottom: 5px;
 }
 
+.input-group {
+    margin-bottom: 5px;
+
+    .form-control {
+        margin-bottom: 0 !important;
+    }
+}
+
 .input-group-addon {
     border-radius: 0;
     font-size: @font-size;
