MZ-16 added EPPlus NuGet package for Excel; added Excel action result and Excel() helper method

--- a/src/Mzayad.Web/Areas/admin/Views/Users/Index.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Users/Index.cshtml
@@ -30,8 +30,9 @@
     {
         columns.Bound(i => i.FirstName);
         columns.Bound(i => i.LastName);
+        columns.Bound(i => i.UserName);
         columns.Bound(i => i.Email);
-        //columns.Bound(i => i.CreatedLocalTime).Title("Created");
+        //columns.Bound(i => i.CreatedUtc).Format("{0:dd MMM yyyy}").Title("Created");
         columns.LinkColumn("Details", "users/details/#=Id#");
     })
 )
