--- a/src/Mzayad.Web/Content/site-kendo.less
+++ b/src/Mzayad.Web/Content/site-kendo.less
@@ -5,6 +5,10 @@
 }
 .k-grid table {
     border-collapse: collapse;
+
+    tbody {
+        font-size: @font-size - 0.2;
+    }
 }
 
 .k-grid-header .k-header:first-child, 
