--- a/src/Mzayad.Web/Content/site-forms.less
+++ b/src/Mzayad.Web/Content/site-forms.less
@@ -58,6 +58,10 @@ input[type=number].no-spinner::-webkit-outer-spin-button {
     content: '\0000a0' // add &nbsp; to prevent empty contents from collapsing
 }
 
+.form-search {
+    margin-bottom: 25px;
+}
+
 .form-readonly {
     opacity: 0.5;
 }
