--- a/src/Mzayad.Web/Content/site-admin.css
+++ b/src/Mzayad.Web/Content/site-admin.css
@@ -1,8 +1,4 @@
-﻿#page-title {
-  padding-bottom: 20px;
-  font-size: 20px;
-}
-.form-report-filter {
+﻿.form-report-filter {
   margin-bottom: 1em;
 }
 .date-picker {
