--- a/src/Mzayad.Web/Content/site.css
+++ b/src/Mzayad.Web/Content/site.css
@@ -2,7 +2,7 @@
   font-size: 62.5%;
 }
 body {
-  padding-top: 65px;
+  padding-top: 75px;
   padding-bottom: 20px;
 }
 body > div {
@@ -21,7 +21,10 @@ h4 {
   margin-bottom: 1em;
 }
 h1 {
-  font-size: 3rem;
+  font-size: 2.4rem;
+}
+h2 {
+  font-size: 2.2rem;
 }
 .lead {
   font-size: 1.6rem;
@@ -163,5 +166,50 @@ h1 {
 .table.table-bordered > thead > tr > th,
 .table.table-bordered > tfoot > tr > th {
   border: 1px solid #132e72;
+}
+.bs-callout {
+  padding: 20px;
+  margin: 20px 0;
+  border: 1px solid #eee;
+  border-left-width: 5px;
+  border-radius: 3px;
+  font-size: 85%;
+}
+.bs-callout h4 {
+  margin-top: 0;
+  margin-bottom: 5px;
+}
+.bs-callout p:last-child {
+  margin-bottom: 0;
+}
+.bs-callout code {
+  border-radius: 3px;
+}
+.bs-callout + .bs-callout {
+  margin-top: -5px;
+}
+.bs-callout-success {
+  border-left-color: #008c00;
+}
+.bs-callout-success h4 {
+  color: #008c00;
+}
+.bs-callout-danger {
+  border-left-color: #b94a48;
+}
+.bs-callout-danger h4 {
+  color: #b94a48;
+}
+.bs-callout-warning {
+  border-left-color: #d9a300;
+}
+.bs-callout-warning h4 {
+  color: #d9a300;
+}
+.bs-callout-info {
+  border-left-color: #00468c;
+}
+.bs-callout-info h4 {
+  color: #00468c;
 }
 /*# sourceMappingURL=site.css.map */
