--- a/src/Mzayad.Web/Areas/admin/Views/Categories/Edit.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Categories/Edit.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Mzayad.Web.Extensions
+@using Newtonsoft.Json
 @model Mzayad.Web.Areas.admin.Models.Categories.EditViewModel
 @{
     ViewBag.Title = "Edit Category";
@@ -19,7 +20,7 @@
                 </div>
                 <div class="form-group">
                     @Html.LabelFor(i => i.ParentId, "Parent")
-                    @Html.DropDownListFor(m => m.Category.ParentId, Model.PotentialParentCategories, "Parent Category", new {@class = "form-control"})
+                    @Html.DropDownListFor(m => m.Category.ParentId, Model.Categories, "Parent Category", new {@class = "form-control"})
                 </div>
                 <div class="form-group">
                     @Html.LabelFor(i => i.Category.Slug, "URL")
@@ -27,7 +28,7 @@
                         <span class="input-group-addon">/categories/</span>
                         @Html.TextBoxFor(i => i.Category.Slug, new {@class = "form-control"})
                     </div>
-                    @Html.ValidationMessageFor(i => i.Category.Slug, "Please enter a valid, unique URL.")
+                    @Html.ValidationMessageFor(i => i.Category.Slug, "Please enter a valid and unique URL.")
                 </div>
             </section>
 
@@ -51,7 +52,11 @@
     <script>
         (function ($) {
 
-            $("#Category_Slug").slugify("#Name_0_Value", false);
+            var existingSlugs = @Html.Raw(JsonConvert.SerializeObject(Model.ExistingSlugs));
+
+            $("#Category_Slug").slugify("#Name_0_Value", false)
+                               .addSlugErrorValidation(existingSlugs);
+
             $("#btnDelete").click(function () {
                 var categoryWarningText = "Are you sure you want to permanently delete this category?";
                 var submitForm = confirm(categoryWarningText);
