--- a/src/Mzayad.Web/Areas/admin/Views/Categories/Index.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Categories/Index.cshtml
@@ -1,5 +1,4 @@
-﻿
-@using Mzayad.Models
+﻿@using Mzayad.Models
 @using Mzayad.Web.Extensions
 @model IEnumerable<Mzayad.Models.Category>
 
@@ -9,11 +8,14 @@
 
 @helper RenderCategory(Category category, int depth)
 {
+    var url = Url.Action("Index", "Categories", new { area = "", slug = category.Slug }, "https");
+    var uri = new Uri(url);
+    
     <tr>
         <td>
             <span style="padding-left: @(depth * 20)px;">@category.Name</span>
         </td>
-        
+        <td><a href="@url">@uri.PathAndQuery</a></td>
         <td class="link-cell">@Html.ActionLink("Edit", "Edit", "Categories", new { id = category.CategoryId }, null)</td>
     </tr>
 
@@ -34,7 +36,7 @@
     <thead>
         <tr>
             <th>Category</th>
-            
+            <th>URL</th>
             <th></th>
         </tr>
     </thead>
